celian: synchro champs connexion bdd

--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -24,12 +24,12 @@
                         <h1 class="color1 taille_conexion">Connexion</h1>
                         <div class="col-mb-3">
                             <br><label for="user" class="form-label case color1">Nom d'utilisateur :</label><br>
-                            <input type="text" name="user" id="user" class="form-control"
+                            <input type="text" name="user" id="mail" class="form-control"
                                 placeholder="Tapez votre nom d'utilisateur">
                         </div>
                         <div class="col-mb-3">
                             <br> <label for="mdp" class="form-label color1">Mot de passe :</label><br>
-                            <input type="password" name="mdp" id="mdp" class="form-control"
+                            <input type="password" name="mdp" id="chp_motPasSe_CY" class="form-control"
                                 placeholder="Tapez votre mot de passe">
                         </div>
                         <h2 class="taille color1">Mot de passe oublié ?</h2>
